--- a/styles/hero-content.css
+++ b/styles/hero-content.css
@@ -1,6 +1,7 @@
 .hero-content {
   position: relative;
   padding-block: 5.125rem;
+  margin-top: 2rem;
   & img {
     max-width: 2.5rem;
     max-height: 2.5rem;
@@ -104,5 +105,48 @@
 @keyframes appear {
   to {
     opacity: 1;
+  }
+}
+
+@media (width >= 90em) {
+  .hero-content {
+    padding-block: 7.125rem 9.875rem;
+    margin-block: 6rem 5rem;
+    & img {
+      max-width: 5rem;
+      max-height: 5rem;
+    }
+    & p {
+      line-height: 200%;
+    }
+    & img[src*="spellbook"] {
+      left: 680px;
+      top: 20px;
+    }
+    & img[src*="ouija"] {
+      left: 200px;
+      bottom: 130px;
+      transform: rotate(95deg);
+    }
+    & img[src*="ball"] {
+      left: 1200px;
+      bottom: 130px;
+      transform: rotate(-15deg);
+    }
+    &:hover {
+      & img[src*="ouija"] {
+        &:hover {
+          transform: rotate(115deg);
+          scale: 1.1;
+        }
+      }
+      & img[src*="ball"] {
+        animation: appear 1.5s 1400ms both;
+        &:hover {
+          transform: rotate(5deg);
+          scale: 1.1;
+        }
+      }
+    }
   }
 }
