--- a/styles/utility.css
+++ b/styles/utility.css
@@ -10,6 +10,18 @@
   padding-inline: var(--px-md);
 }
 
+.blur {
+  width: 100%;
+  height: 100%;
+  background-color: var(--pink-low);
+  filter: blur(600px);
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+}
+
+.nobr { white-space: nowrap }
+
 @media (width >= 90em) {
   .desktop-only {
     display: initial;
