--- a/styles/global.css
+++ b/styles/global.css
@@ -33,10 +33,17 @@
   --body-xs: .75rem;
   --button: .875rem;
   --link: .875rem;
+  --tag: .625rem;
   --px-md: 1.25rem;
+  --px-card: 2rem;
+  --py-card: 2rem 1.75rem;
   --fw-bold: 700;
   --fw-medium: 500;
   --fw-regular: 400;
+}
+
+ul[role='list'] {
+  list-style: none;
 }
 
 body {
