--- a/styles/utility.css
+++ b/styles/utility.css
@@ -36,6 +36,16 @@
   inset: 0;
 }
 
+.blur-blue {
+  width: 100%;
+  height: 100%;
+  background-color: var(--shape-base);
+  border-radius: 80%;
+  filter: blur(600px);
+  position: absolute;
+  z-index: -1;
+}
+
 .nobr { white-space: nowrap }
 
 @media (width >= 90em) {
