--- a/styles/links.css
+++ b/styles/links.css
@@ -19,9 +19,16 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-
     border-radius: 5rem;
     position: relative;
+    & svg {
+      z-index: 1;
+    }
+    &:hover {
+      & svg path {
+        fill: var(--text-body);
+      }
+    }
     &:hover::before {
       scale: 1;
     }
@@ -36,18 +43,9 @@ a {
       border-radius: inherit;
       background: var(--shape-stroke);
       position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-
+      z-index: 0;
       scale: 0;
       transition: scale 200ms;
-    }
-  }
-  & a:hover {
-    & svg path {
-      stroke: var(--text-body);
-      fill: var(--text-body);
     }
   }
 }
